--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "lib/index.js",
   "bin": {
-    "presskit": "bin/neopresskit"
+    "neopresskit": "bin/neopresskit"
   },
   "scripts": {
     "start": "node bin/neopresskit build --watch --dev data",
